--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -35,7 +35,9 @@ $(function () {
         "csrfmiddlewaretoken": csrftoken,
       },
       success: function(response) {
+        $("#player").hide();
         $("#player").html(response);
+        $("#player").fadeIn();
       }
     })
   });
