--- a/index/templates/index/browse.html
+++ b/index/templates/index/browse.html
@@ -1,5 +1,9 @@
 {% extends 'index/header.html' %}
 
+{% block title %}
+browse
+{% endblock %}
+
 {% block content %}
 <div class="row alphabet" id="alphabet">
   <div class="col">
