--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -7,7 +7,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>dopepod</title>
+    <title>
+      {% block title %}
+      {% endblock %}
+    </title>
 
     <!--Font Awesome-->
     <!--<script src="https://use.fontawesome.com/793ac32e1c.js"></script>-->
