--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -1,5 +1,9 @@
 {% extends 'index/header.html' %}
 
+{% block title %}
+dopepod
+{% endblock %}
+
 {% block content %}
 <div class="row search-bar" id="search-bar">
   <div class="col-sm-3">
