--- a/podcasts/templates/results.html
+++ b/podcasts/templates/results.html
@@ -1,5 +1,9 @@
 {% extends 'index/index.html' %}
 
+{% block title %}
+something
+{% endblock %}
+
 {% block results %}
 {% if podcasts %}
 {% for podcast in podcasts %}
