--- a/podcasts/templates/ajax_podinfo.html
+++ b/podcasts/templates/ajax_podinfo.html
@@ -28,6 +28,7 @@
 </div>
 
 <div class="row tracks" id="tracks">
+{% include 'tracks.html' %}
 </div>
 
 <script type="text/javascript">
@@ -70,6 +71,7 @@ $(function() {
     success: function(response) {
       $("#tracks").hide();
       $("#tracks").html(response);
+      $('#overlay').addClass('hide');
       $("#tracks").fadeIn();
     }
   });
