--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="row podinfo" id="podinfo">
+<div class="row podinfo" id="{{ podcast.itunesid }}">
   <div class="col-sm-3">
     <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
   </div>
@@ -40,50 +40,4 @@
 <div class="row tracks" id="tracks">
 {% include 'tracks.html' %}
 </div>
-
-<script type="text/javascript">
-$(function() {
-  // TODO check if subscribed or nah
-  var itunesid = "{{ podcast.itunesid }}";
-  var csrftoken = "{{ csrf_token }}";
-  // subscription button
-  $("#sub-form").submit(function(event) {
-    // Stop form from submitting normally
-    event.preventDefault();
-    var button = $("#sub-button");
-    var url = "{% url 'subscribe' %}";
-    $.ajax({
-      method: "POST",
-      url: url,
-      data: {
-        "itunesid": itunesid,
-        "csrfmiddlewaretoken": csrftoken,
-      },
-      error: function(xhr, ajaxOptions, thrownError){
-        console.log(thrownError);
-      },
-      success: function(data) {
-        button.val(data);
-      }
-    });
-  });
-  $.ajax({
-    method: "POST",
-    url: "{% url 'tracks' %}",
-    data: {
-      "itunesid": itunesid,
-      "csrfmiddlewaretoken": csrftoken,
-    },
-    error: function(xhr, ajaxOptions, thrownError){
-      console.log(thrownError);
-    },
-    success: function(response) {
-      $("#tracks").hide();
-      $("#tracks").html(response);
-      $('#overlay').addClass('hide');
-      $("#tracks").fadeIn();
-    }
-  });
-});
-</script>
 {% endblock %}
