--- a/index/templates/account/login.html
+++ b/index/templates/account/login.html
@@ -1,8 +1,5 @@
-{% extends 'account/base.html' %}
 {% load i18n %}
 {% load account socialaccount %}
-
-{% block content %}
 
 <h1>{% trans "Sign In" %}</h1>
 
@@ -27,7 +24,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 {% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
-<a class="signup-link" method="GET" href="{{ signup_url }}" >sign up</a> first.{% endblocktrans %}</p>
+<a class="signup-link" href="{{ signup_url }}" >sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
 <form class="login-form" method="POST" action="{% url 'account_login' %}">
@@ -36,5 +33,3 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
 </form>
-
-{% endblock %}
