--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -10,19 +10,19 @@ dopepod
     <div class="row">
       <div class="col-sm-6">
         <div class="dropdown">
-          <button class="btn btn-sm dropdown-toggle filter-button" type="button" id="dropdownMenuButton"
+          <button class="btn btn-sm dropdown-toggle filter-button genre-select" type="button" id="dropdownMenuButton"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Genre
           </button>
           <div class="dropdown-menu dropdown-filter" aria-labelledby="dropdownMenuButton">
             <div class="btn-group-vertical" data-toggle="buttons">
               <label class="btn btn-sm filter-button active">
-                <input class="search-options" type="radio" id="All" value="All" checked>
+                <input type="radio" value="All" checked>
                 All
               </label>
               {% for genre in genres %}
               <label class="btn btn-sm filter-button">
-                <input class="search-options" type="radio" id="{{ genre }}" value="{{ genre }}">
+                <input type="radio" value="{{ genre }}">
                 {{ genre }} - {{ genre.n_podcasts }}
               </label>
               {% endfor %}
@@ -32,19 +32,19 @@ dopepod
       </div>
       <div class="col-sm-6">
         <div class="dropdown">
-          <button class="btn btn-sm dropdown-toggle filter-button" type="button" id="dropdownMenuButton"
+          <button class="btn btn-sm dropdown-toggle filter-button language-select" type="button" id="dropdownMenuButton"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Language
           </button>
           <div class="dropdown-menu dropdown-filter" aria-labelledby="dropdownMenuButton">
             <div class="btn-group-vertical" data-toggle="buttons">
               <label class="btn btn-sm filter-button active">
-                <input class="search-options" type="radio" name="language-select" id="All" value="All" checked>
+                <input type="radio" value="All" checked>
                 All
               </label>
               {% for language in languages %}
               <label class="btn btn-sm filter-button">
-                <input class="search-options" type="radio" name="language-select" id="{{ language }}" value="{{ language }}" >
+                <input type="radio" value="{{ language }}" >
                 {{ language }} - {{ language.n_podcasts }}
               </label>
               {% endfor %}
@@ -70,7 +70,7 @@ dopepod
       <div class="col">
         <div class="btn-group-vertical" data-toggle="buttons">
           <label class="btn btn-sm filter-button active">
-            <input class="search-options" type="checkbox" name="explicit-select" checked>
+            <input class="explicit-select" type="checkbox" checked>
             Show Explicit
           </label>
         </div>
