--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -10,7 +10,7 @@
     </li>
     {% if user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link settings" href="{% url 'edit_profile' %}" data-toggle="modal" data-target="#modal">settings</a>
+      <a class="nav-link settings" href="{% url 'settings' %}" data-toggle="modal" data-target="#modal">settings</a>
     </li>
     <li class="nav-item">
       <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">subscriptions</a>
