--- a/podcasts/templates/results.html
+++ b/podcasts/templates/results.html
@@ -6,24 +6,29 @@ results
 
 {% block results %}
 {% if podcasts %}
-{% for podcast in podcasts %}
-<div class="col-lg-2 col-md-3 col-sm-4 result-box">
+<div class="col">
   <div class="row">
-    <a class="col result-image show-podinfo" id="{{ podcast.itunesid }}" href=
+    {% for podcast in podcasts %}
+    <a class="col-lg-2 col-md-3 col-sm-4 result-image show-podinfo" id="{{ podcast.itunesid }}" href=
      "{% url 'podinfo' itunesid=podcast.itunesid %}">
-      <img src="{{ podcast.artworkUrl }}156x156bb.jpg" />
-      <div class="col">
-        <div class="row result-title">
-          <h6>{{ podcast.title }}</h6>
-        </div>
-        <div class="row result-genre">
-          <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
+      <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
+      <div class="row">
+        <div class="col">
+          <div class="row result-title">
+            <div class="col">
+              <h6>{{ podcast.title }}</h6>
+            </div>
+          </div>
+          <div class="row result-genre">
+            <div class="col">
+              <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
+            </div>
+          </div>
         </div>
       </div>
     </a>
+    {% endfor %}
   </div>
 </div>
-{% endfor %}
-
 {% endif %}
 {% endblock %}
