--- a/index/templates/index/ajax_index.html
+++ b/index/templates/index/ajax_index.html
@@ -1,83 +1,44 @@
-<div class="row search-bar" id="search-bar">
-  <div class="col-sm-3">
+<div class="row">
+  <div class="col">
+
+<!-- SEARCH BAR -->
     <div class="row">
-      <div class="col-sm-6">
-        <div class="dropdown">
-          <button class="btn btn-sm dropdown-toggle filter-button genre-select" type="button" id="dropdownMenuButton"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Genre
-          </button>
-          <div class="dropdown-menu dropdown-filter" aria-labelledby="dropdownMenuButton">
-            <div class="btn-group-vertical" data-toggle="buttons">
-              <label class="btn btn-sm filter-button active">
-                <input type="radio" value="All" checked>
-                All
-              </label>
-              {% for genre in genres %}
-              <label class="btn btn-sm filter-button">
-                <input type="radio" value="{{ genre }}">
-                {{ genre }} - {{ genre.n_podcasts }}
-              </label>
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="dropdown">
-          <button class="btn btn-sm dropdown-toggle filter-button language-select" type="button" id="dropdownMenuButton"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Language
-          </button>
-          <div class="dropdown-menu dropdown-filter" aria-labelledby="dropdownMenuButton">
-            <div class="btn-group-vertical" data-toggle="buttons">
-              <label class="btn btn-sm filter-button active">
-                <input type="radio" value="All" checked>
-                All
-              </label>
-              {% for language in languages %}
-              <label class="btn btn-sm filter-button">
-                <input type="radio" value="{{ language }}" >
-                {{ language }} - {{ language.n_podcasts }}
-              </label>
-              {% endfor %}
+      <div class="col search-bar" id="search-bar">
+        <div class="texture">
+          <div class="row">
+            <div class="col">
+              <form id="search-form" method="GET" action="{% url 'search' %}">
+                <div class="input-group">
+                  <input class="form-control" type="text" name="q" id="q" type="search" placeholder="Search for..."
+                  aria-label="Search for..." autocomplete="off" accept-charset="utf-8">
+                  <span class="input-group-btn">
+                    <button class="btn btn-secondary" type="submit">Go!</button>
+                  </span>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-sm-6">
-    <form id="search-form" method="GET" action="{% url 'search' %}">
-      <div class="input-group">
-        <input class="form-control" type="text" name="q" id="q" type="search" placeholder="Search for..."
-        aria-label="Search for..." autocomplete="off" accept-charset="utf-8">
-        <span class="input-group-btn">
-        <button class="btn btn-secondary" id="search-button" type="submit">Go!</button>
-        </span>
-      </div>
-    </form>
-  </div>
-  <div class="col-sm-3">
+
+<!-- RESULTS -->
     <div class="row">
-      <div class="col">
-        <div class="btn-group-vertical" data-toggle="buttons">
-          <label class="btn btn-sm filter-button active">
-            <input class="explicit-select" type="checkbox" checked>
-            Show Explicit
-          </label>
+      <div class="col search-results">
+        <div class="texture">
+          <div class="row" id="results">
+            {% block results %}
+            {% endblock %}
+          </div>
         </div>
       </div>
     </div>
+
+<!-- RECOMMENDATIONS -->
+
+  <!--
+  <div class="row" id="recommendations">
+  </div>
+  -->
   </div>
 </div>
-
-<div class="row search-results" id="results">
-  {% block results %}
-  {% endblock %}
-</div>
-
-<!--
-<div class="row" id="recommendations">
-</div>
--->
