--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -1,14 +1,21 @@
 {% extends 'index/header.html' %}
 
 {% block content %}
-<div class="row settings">
-  <div class="col">
-    <h1>My Profile</h1>
-    <form class="settings-form" action="{% url 'settings' %}" method="POST">
-      {{ user_form.as_p }}
-      {{ profile_form.as_p }}
-      <button type="submit">Save changes</button>
-    </form>
-  </div>
+<div class="modal-header">
+  <h5>My Profile</h5>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <form class="settings-form" action="{% url 'settings' %}" method="POST">
+    {% csrf_token %}
+    {{ user_form.as_p }}
+    {{ profile_form.as_p }}
+    <div class="modal-footer">
+      <button class="btn btn-primary" type="submit">Save changes</button>
+      <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+    </div>
+  </form>
 </div>
 {% endblock %}
