--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -6,9 +6,9 @@
     <h6>{{ track.title }}</h6>
   </a>
   <div class="col-sm-3">
-    <a class="btn btn-primary play" id="{{ track.url }}" href="{% url 'play' url=track.url %}" target="_blank">
-      Play
-    </a>
+    <form class="play" id="{{ track.url }}" action="{% url 'play' url=track.url %}" method="POST" target="_blank">
+      <button class="btn btn-primary" type="submit">Play</button>
+    </form>
     <a class="btn btn-primary" href="{{ track.url }}">
       Download
     </a>
