--- a/index/templates/index/ajax_browse.html
+++ b/index/templates/index/ajax_browse.html
@@ -1,5 +1,11 @@
 <div class="row alphabet" id="alphabet">
   <div class="col">
-
+    {% for podcast in podcasts %}
+    <div class="row">
+      <div class="col">
+        <p>{{ podcast.title }}</p>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 </div>
