added a couple of tests

--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-
-{% load static %}
-{% load account %}
-
+{% load static %}{% load account %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
