--- a/index/templates/index/ajax_index.html
+++ b/index/templates/index/ajax_index.html
@@ -23,22 +23,28 @@
     </div>
 
 <!-- RESULTS -->
-    <div class="row">
-      <div class="col search-results">
-        <div class="texture">
-          <div class="row" id="results">
-            {% block results %}
-            {% endblock %}
-          </div>
-        </div>
+<div class="row">
+  <div class="col-sm-2" style="background-color: #3b6d83;">
+    <div class="texture">
+      <div class="row">
       </div>
     </div>
+  </div>
+  <div class="col-sm-10 search-results">
+    <div class="texture">
+      <div class="row" id="results">
+        {% block results %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- RECOMMENDATIONS -->
 
-  <!--
-  <div class="row" id="recommendations">
-  </div>
-  -->
+    <!--
+    <div class="row" id="recommendations">
+    </div>
+    -->
   </div>
 </div>
